<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="15dp">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/text_input_layout_medication_title"
                android:layout_width="match_parent"
                android:layout_margin="12dp"
                android:layout_height="match_parent">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/text_input_editText_medication_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:hint="Medication title here" />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/text_input_layout_medication_description"
                android:layout_width="match_parent"
                android:layout_margin="12dp"
                android:layout_height="match_parent">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/text_input_editText_medication_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:hint="Description" />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/text_input_layout_medication_interval"
                android:layout_width="match_parent"
                android:layout_margin="12dp"
                android:layout_height="match_parent">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/text_input_editText_medication_interval"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:hint="Interval in Hours" />
            </android.support.design.widget.TextInputLayout>

            <com.savvi.rangedatepicker.CalendarPickerView
                xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/calendar_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="12dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingBottom="16dp"
                android:scrollbarStyle="outsideOverlay"
                android:clipToPadding="false"
                app:tsquare_dividerColor="@color/calendar_divider"
                app:tsquare_headerTextColor="@color/primaryDarkColor"
                />
            <Button
                android:id="@+id/button_submit_medication"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:text="Submit"
                android:textAllCaps="true"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                android:background="@drawable/button_style_rounded_corners"/>

        </LinearLayout>
    </ScrollView>


</LinearLayout>