...
               android:clickable="true"
               android:focusable="true"
               android:textColor="#1976d2"
               android:text="Don't have an account? tap here to register" />
           <!-- Снял Конец коммента ДО -->
           <com.google.android.gms.common.SignInButton
               android:id="@+id/sign_in_button"
               android:layout_width="match_parent"
               android:layout_height="60dp"
               android:layout_marginEnd="4dp"
               android:layout_marginStart="4dp"
               android:layout_marginTop="20dp"/>

...
